--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap");
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       * {
@@ -22,17 +25,17 @@
         position: absolute;
         z-index: 2;
         bottom: 5px;
-        left: 40%;
+        left: 45%;
         opacity: 0.5;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: "Akaya Telivigala", cursive;
         color: white;
-        font-size: 7px;
+        font-size: 20px;
       }
     </style>
     <title>Change color</title>
   </head>
   <body>
-    <h1>&lt;&sol;&gt; with &#9829; by Faisal</h1>
+    <h1>&lt;&sol;&gt; by Faisal</h1>
     <canvas id="c"></canvas>
     <script src="anime.min.js"></script>
     <script
